Fri May 25 00:59:44 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - Added dependencies on dbus, dbus-glib and glib development headers to the
   Debian control file.
Wed May 23 23:59:59 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/dstate-hal.c: added empty alarm_init, alarm_set and alarm_commit
   functions

Wed May 23 21:13:10 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Enabled requested Alarm function in bcmxcp.c

Wed May 23 18:49:21 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * common/common.c, include/common.h:
   - fatalx() and fatal_with_errno() now take a (mandatory) parameter that
     sets the exit status (in the same way we set the debuglevel for upsdebugx
     and upsdebug_with_errno and the loglevel for upslogx and upslog_with_errno)
 * [various]:
   - change fatalx("message...") to fatalx(EXIT_FAILURE, "message...")
   - change fatal_with_errno("message...") to fatal_with_errno(EXIT_FAILURE,
     "message...")

Wed May 23 18:27:03 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/various: use fatalx() to exit abnormally and make sure an
   informative message is displayed
 - docs/developers.txt: don't use exit() in drivers

Wed May 23 17:15:34 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - drivers/powerpanel.[ch]: fixed polarity of ups.beeper.status

Tue May 22 23:47:58 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - drivers/megatec_usb.c: added debug output before exit when no supported
   UPSes were found.

Tue May 22 13:55:26 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - data/driver.list: sorted Belkin models by model name.

Tue May 22 12:23:28 UTC 2007 / Alexander I. Gordeev <lasaine@lvk.cs.msu.su>

 - data/driver.list: added all UPSes that are reported supported to the list.

Tue May 22 11:04:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 * clients/upsclient.c:
   - Don't check for sockettype and protocol (shouldn't be necessary, since